Fix modal header overlapping

--- a/core/app/shell/src/themes/suite8/css/layout/_record-modal.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_record-modal.scss
@@ -210,7 +210,7 @@ body.modal-open.detached-modal-open {
           overflow: hidden;
 
           span {
-            max-width: 223px;
+            max-width: 215px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
